Utilizando o ContextAPI para transportar dados aos componentes e estilizando

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -41,6 +41,31 @@
 }
 
 
+.CurrentEpisodes{
+
+    text-align: center;
+
+    img {
+        border-radius: 1.5rem;
+    }
+
+    strong {
+        display: block;
+        margin-top: 2rem;
+        font: 600 1.25rem Lexend, sans-serif;
+        line-height: 1.75rem;
+    }
+
+    span {
+        display: block;
+        margin-top: 1rem;
+        opacity: 0.6;
+        line-height: 1.5;
+    }
+
+}
+
+
 .EmptyPlayer {
 
     width: 100%;
@@ -112,6 +137,10 @@
     border: 0;
     font-size: 0;
 
+    &:disabled{
+        cursor: default;
+    }
+
 }
 
 .PlayButton{
@@ -125,6 +154,8 @@
 
     opacity: 0.4;
 
+    transition: opacity 0.2s;
+
 }
 
 .ImageButton:hover{
@@ -134,7 +165,6 @@
 }
 
 .PlayButton:hover{
-
     opacity: 1;
 
 }
