--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -158,14 +158,28 @@
 
 }
 
+
+
 .ImageButton:hover{
 
     height: 2rem;
 
 }
 
+
+
+.ImageButtonActive {
+    filter: invert(0.35) sepia(1) saturate(1) hue-rotate(100deg)
+}
+
 .PlayButton:hover{
     opacity: 1;
 
 }
+
+
+.ImageButtonActive:hover{
+    filter: brightness(0.6) invert(0.35) sepia(3) saturate(8) hue-rotate(100deg)
+}
+
 
